# find-duplicates

./: .gitignore  DEVELOPMENT.md  README.md  duplicates_handler.py  find_duplicates_xxh3_128.py  pyproject.toml
docs/: DEVELOPMENT.md
docs/superpowers/plans/: 2026-07-02-duplicate-handler-plan.md  2026-07-02-task-2-fixes.md  2026-07-07-cache-init-error.md  2026-07-07-rename-starter-script.md
docs/superpowers/specs/: 2026-07-02-duplicate-handler-design.md  2026-07-07-cache-init-error-design.md  2026-07-07-rename-starter-script-design.md  2026-07-12-include-single-file-design.md
src/find_duplicates/: __init__.py  cache.py  cli.py  output.py  scanner.py
src/find_duplicates/handler/: __init__.py  cli.py  core.py  web.py
src/find_duplicates/handler/templates/: index.html
tests/: test_cache.py  test_handler.py  test_output.py  test_scanner.py
