[project]
name = "find-duplicates"
version = "0.8.0"
requires-python = ">=3.12"
dependencies = [
    "xxhash>=3.8.0",
    "rich>=13.7.0",
    "send2trash>=1.8.0",
    "blake3>=0.4.1",
]

[project.scripts]
find-duplicates = "find_duplicates.cli:main"
duplicates-handler = "find_duplicates.handler.core:main"


[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

